src/test/ui/underscore-lifetime/underscore-outlives-bounds.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/underscore-outlives-bounds.rs:7:10
   |
LL | impl<'b: '_> Foo<'b> for i32 {}
   |          ^^ `'_` is a reserved lifetime name

warning: lifetime parameter `'a` never used
  --> $DIR/underscore-outlives-bounds.rs:6:11
   |
LL | trait Foo<'a> {}
   |          -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error: aborting due to previous error

